@@ -4,10 +4,10 @@ import static org.junit.Assert.assertEquals;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.List;
 
-import org.apache.commons.io.FileUtils;
 import org.junit.Test;
 
 import io.proleap.cobol.asg.params.CobolParserParams;
@@ -33,7 +33,7 @@ public class CopyTxtExtensionTest {
 		final String preProcessedInput = new CobolPreprocessorImpl().process(inputFile, params);
 
 		final File expectedFile = new File(DIR + "/CopyTxtExtension.cbl.preprocessed");
-		final String expected = FileUtils.readFileToString(expectedFile, StandardCharsets.UTF_8);
+		final String expected = Files.readString(expectedFile.toPath(), StandardCharsets.UTF_8);
 		assertEquals(expected, preProcessedInput);
 	}
 
@@ -51,7 +51,7 @@ public class CopyTxtExtensionTest {
 		final String preProcessedInput = new CobolPreprocessorImpl().process(inputFile, params);
 
 		final File expectedFile = new File(DIR + "/CopyTxtExtension.cbl.preprocessed");
-		final String expected = FileUtils.readFileToString(expectedFile, StandardCharsets.UTF_8);
+		final String expected = Files.readString(expectedFile.toPath(), StandardCharsets.UTF_8);
 		assertEquals(expected, preProcessedInput);
 	}
 }
