@@ -12,10 +12,10 @@ import static org.junit.Assert.assertEquals;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.apache.commons.io.FileUtils;
 import org.junit.Test;
 
 import io.proleap.cobol.preprocessor.CobolPreprocessor.CobolSourceFormatEnum;
@@ -45,7 +45,7 @@ public class CobolLineWriterTest {
 		final String serializedInput = writer.serialize(lines);
 		final File expectedFile = new File(
 				"src/test/resources/io/proleap/cobol/preprocessor/sub/line/writer/LineContinuation.cbl.preprocessed");
-		final String expected = FileUtils.readFileToString(expectedFile, StandardCharsets.UTF_8);
+		final String expected = Files.readString(expectedFile.toPath(), StandardCharsets.UTF_8);
 		assertEquals(expected, serializedInput);
 	}
 }
